create weather & login register

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
+
+body {
+background-image: url('./daniel-ramirez-q4TfWtnz_xw-unsplash.jpg');
+background-size: cover;
+background-position: right;
+transition: 0.4 ease-out;
+}
+main{
+  min-width: 100vh;
+}
+.search-bar {
+  width: 100%;
+  margin: 0 auto 75px;
+  padding: 15px;
+}
+.location-box .location {
+  color: #FFF;
+  font-size: 32px;
+  font-weight: 500;
+  text-align: center;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.7);
+}
+.location-box .date {
+  color:#FFF ;
+  font-size: 20px;
+  font-weight: 500;
+  font-style: italic;
+  text-align: center;
+  text-shadow: 2px 2px rgba(50, 50, 70, 0.7 );
+}
+.weather-box{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.weather-box .temp {
+  position: relative;
+  display: inline-block;
+  margin : 30px auto ;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 16px;
+  padding: 15px 25px ;
+  color: #FFF;
+  font-size: 102px;
+  font-weight: 900;
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.7);
+  text-align: center;
+  box-shadow: 3px 6px rgba(0, 0, 0, 0.2);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.weather {
+  color: #FFF;
+  font-weight: 700;
+  font-size: 48px;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+  text-align: center;
 }
